<resources>
    <string name="app_name">Druglane</string>
    <string name="title_activity_login">Login</string>
    <string name="title_view_replies">Replies</string>
    <string name="title_view_image">Attachment</string>
    <string name="signup">Signup</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_optional">Quantity (optional) </string>
    <string name="my_location">Only sellers in my location </string>
    <string name="my_country">All sellers in my country </string>
    <string name="sellers">All sellers (even outside my country) </string>
    <string name="location_filter">Location Filter</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_mismatch">The password must match the confirmation</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pharmacies_only">Only licensed pharmacies can sell</string>
    <string name="login_wrong">Wrong combination. Please try again
    </string>
    <string name="preference_file_key">UserData</string>
    <string name="sellers_title">Sellers</string>
    <string name="user_id_key">UserId</string>
    <string name="device_id_key">DeviceId</string>
    <string name="username_key">UserName</string>
    <string name="name_key">Name</string>
    <string name="type_key">Type</string>
    <string name="phone_key">Phone</string>
    <string name="physical_location">Physical Location</string>
    <string name="license_number">License Number</string>
    <string name="location_key">Location</string>
    <string name="country_key">Country</string>
    <string name="subscription_key">Subscription</string>
    <string name="activated_key">Activated</string>
    <string name="activate">Activate</string>
    <string name="price_filter">Price Filter</string>
    <string name="retail_prices">Only retail prices</string>
    <string name="all_prices">Both wholesale and retail prices</string>
    <string name="wholesale_prices">Only wholesale prices</string>
    <string name="subscription_title">Subscriptions</string>
    <string name="resend_code">Resend Code</string>
    <string name="type_buyer">I only want to buy</string>
    <string name="type_seller">I want to buy and sell</string>
    <string name="not_seller">You\'re not registered as a seller. Update your account in the menu</string>
    <string name="not_subscribed">Your subscription has expired. Please select a subscription plan to enjoy
    the seller\'s service</string>
    <string name="select_subscription">Select Subscription</string>
    <string name="seller_settings_only_retail">I only want to receive requests asking for retail prices</string>
    <string name="seller_settings_only_wholesale">I only want to receive requests asking for wholesale prices</string>
    <string name="seller_settings_all">I want to receive all requests</string>
    <string name="seller_settings_notice">Buyers have the option to restrict their searches to
        only retail prices, wholesale prices, or any. \n
        You can adjust your settings so that you do not receive requests you are not interested in
    </string>
    <string name="checking_subscription">Checking Subscription</string>
    <string name="email_key">Email</string>
    <string name="name">Your Name/Company Name</string>
    <string name="forgot_password">Forgot password</string>
    <string name="signup_link"><a href="https://thedruglane.com/signup">No Account? Signup here</a></string>
    <string name="login_link"><a href="https://thedruglane.com/signup">Already have an account? Login here</a></string>
    <string name="about_link"><a href="https://thedruglane.com/about">About this app/site</a></string>
    <string name="terms_link"><a href="https://thedruglane.com/terms">Read our terms &amp; conditions</a></string>
    <string name="agreement">Signing up implies that you agree to all our terms and conditions</string>
    <string name="subscribe_link"><a href="https://thedruglane.com/subscribe">Subscribe here</a></string>
    <string name="go_to_account">Go to account</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="new_reply_channel">New Reply</string>
    <string name="new_reply_id">NEWREPLY</string>
    <string name="new_reply_description">New reply to your search</string>
    <string name="new_search_channel">New Search</string>
    <string name="new_search_id">NEWSEARCH</string>
    <string name="title_activity_main2">Druglane</string>
    <string name="tab_text_1">Buying</string>
    <string name="tab_text_2">Selling</string>
    <string name="tab_text_3">Chat</string>
    <string name="section_format">Chat page coming soon: %1$d</string>
    <string name="search_title">Type name or description of item</string>
    <string name="submit">Submit</string>
    <string name="file_attached">View Image</string>
    <string name="hello_blank_fragment">Chat page coming soon</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="seller_settings">Seller Settings</string>
    <string name="reply_history">Reply History</string>
    <string name="select_all">Select All</string>
    <string name="image_content_description">Attachment </string>
    <string name="reply">Reply </string>
    <string name="filter_list">Filter List</string>
    <string name="send">Send </string>
    <string name="account">Account </string>
    <string name="gallery">Gallery </string>
    <string name="delete_all">Delete All </string>
    <string name="reply_all">Reply All </string>
    <string name="verified">Verified Seller </string>
    <string name="camera">Camera </string>
    <string name="no_items_1">Welcome!\n Type the name of an item in the form above and tap the send icon to start</string>
    <string name="no_items_2">No items. We\'ll notify you when buyers search for things</string>
    <string name="reply_instructions">Tap an item to reply, long-press to reply multiple</string>
    <string name="no_replies">Waiting for replies......</string>
    <string name="activation_title">We sent a 4-digit code via sms to you. Please enter it below</string>
    <string name="block">Block </string>
    <string name="block_all">Block All </string>
    <string name="physical_location_hint">E.g. Adenta, opposite Shell Filling Station</string>
    <string name="settings_subscription">Subscription</string>
    <string name="settings_account_details">Edit Account Details</string>
    <string name="settings_Verification">Verification</string>
    <string name="settings_logout">Logout</string>
    <string-array name="regions_array">
        <item>Ashanti Region</item>
        <item>Brong-Ahafo Region</item>
        <item>Central Region</item>
        <item>Eastern Region</item>
        <item>Greater Accra Region</item>
        <item>Northern Region</item>
        <item>Upper East Region</item>
        <item>Upper West Region</item>
        <item>Volta Region</item>
        <item>Western Region</item>
    </string-array>
</resources>