<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:paddingTop="15dp"
                android:text="@string/login_link"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_key" />

            <RadioGroup
                android:id="@+id/user_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.213">

                <RadioButton
                    android:id="@+id/buyer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:text="@string/type_buyer" />

                <RadioButton
                    android:id="@+id/seller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/type_seller" />


            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"

                android:inputType="textPersonName" />

            <!--<TextView-->
                <!--android:id="@+id/lic_num_label"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/license_number"-->
                <!--android:visibility="gone" />-->

            <!--<EditText-->
                <!--android:id="@+id/license_number"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:ems="10"-->

                <!--android:inputType="textPersonName"-->
                <!--android:visibility="gone" />-->

            <TextView
                android:id="@+id/phy_loc_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/physical_location"
                android:visibility="gone" />

            <EditText
                android:id="@+id/physical_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"

                android:hint="@string/physical_location_hint"
                android:inputType="textPersonName"
                android:visibility="gone" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_key" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"

                android:inputType="phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_key" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"

                android:inputType="textEmailAddress" />

            <!--<EditText-->
                <!--android:id="@+id/location"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:ems="10"-->
                <!--android:hint="@string/location_key"-->
                <!--android:imeActionLabel="@string/location_key"-->
                <!--android:inputType="textPersonName" />-->
            <TextView
                android:id="@+id/tef"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_key" />

            <Spinner
                android:id="@+id/countries_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_key" />

            <Spinner
                android:id="@+id/region_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/location_alt_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"

                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"

                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/signup_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_info_blue_24dp"
                android:text="@string/agreement"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/terms_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_link"
                android:textAlignment="center" />

            <Button
                android:id="@+id/signup_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/submit"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/signup_loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>